nivasa-macros/tests/trybuild/scxml_handler_missing_state_arg.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request")]
fn handler() {}

fn main() {}
